@@ -1,26 +1,14 @@
 #!/usr/bin/env python
+import re
+
 from rtfng.utils import RTFTestCase
 from rtfng.Elements import Document
 from rtfng.PropertySets import ParagraphPropertySet, TabPropertySet
 
 from rtfng.document.base import TAB, LINE
 from rtfng.document.section import Section
+from rtfng.document.character import TEXT
 from rtfng.document.paragraph import Paragraph
-
-sampleParagraph = """The play opens one year after the death of Richard II, and
-King Henry is making plans for a crusade to the Holy Land to cleanse himself
-of the guilt he feels over the usurpation of Richard's crown. But the crusade
-must be postponed when Henry learns that Welsh rebels, led by Owen Glendower,
-have defeated and captured Mortimer. Although the brave Henry Percy, nicknamed
-Hotspur, has quashed much of the uprising, there is still much trouble in
-Scotland. King Henry has a deep admiration for Hotspur and he longs for his
-own son, Prince Hal, to display some of Hotspur's noble qualities. Hal is more
-comfortable in a tavern than on the battlefield, and he spends his days
-carousing with riff-raff in London. But King Henry also has his problems with
-the headstrong Hotspur, who refuses to turn over his prisoners to the state as
-he has been so ordered. Westmoreland tells King Henry that Hotspur has many of
-the traits of his uncle, Thomas Percy, the Earl of Worcester, and defying
-authority runs in the family."""
 
 def initializeDoc():
     doc = Document()
@@ -82,20 +70,6 @@ class ParagraphTestCase(RTFTestCase):
     def test_paraDefaultPreviousStyle(self):
         self.doTest()
 
-    # XXX this probably need to go in the character tests...?
-    def make_para():
-        doc, section, styles = initializeDoc()
-        p = Paragraph()
-        p.append('It is also postylesible to provide overrides for element of a style. ',
-                  'For example I can change just the font ',
-                  TEXT('size', size=48),
-                  ' or ',
-                  TEXT('typeface', font=styles.Fonts.Impact) ,
-                  '.')
-        section.append(p)
-        return doc
-    make_para = staticmethod(make_para)
-
     def make_paraTabs():
         doc, section, styles = initializeDoc()
         p = Paragraph()
@@ -124,61 +98,82 @@ class ParagraphTestCase(RTFTestCase):
     def test_paraTabs(self):
         self.doTest()
 
-    def make_para():
+    def make_paraTabLeaders():
         doc, section, styles = initializeDoc()
-        section.append('The alignment of tabs and style can also be controlled. '
-                        'The following paragraph demonstrates how to use flush right tabs'
-                        'and leader dots.')
-
-        para_props = ParagraphPropertySet(tabs = [ TabPropertySet(section.TwipsToRightMargin(),
-                                                  alignment = TabPropertySet.RIGHT,
-                                                  leader    = TabPropertySet.DOTS ) ])
-        p = Paragraph(styles.ParagraphStyles.Normal, para_props)
-        p.append('Before Dots', TAB, 'After Dots')
-        section.append(p)
-
-        section.append('Paragraphs can also be indented, the following is all at the '
-                       'same indent level and the one after it has the first line '
-                       'at a different indent to the rest.  The third has the '
-                       'first line going in the other direction and is also separated '
-                       'by a page break.  Note that the '
-                       'FirstLineIndent is defined as being the difference from the LeftIndent.')
-
-        section.append('The following text was copied from http://www.shakespeare-online.com/plots/1kh4ps.html.')
+        section.append(
+            'The alignment of tabs and style can also be controlled. The '
+            'following demonstrates how to use flush right tabs and the '
+            'supported leaders.')
+        def _makePara(name):
+            tabs = TabPropertySet(
+                section.TwipsToRightMargin(),
+                alignment=TabPropertySet.RIGHT,
+                leader=getattr(TabPropertySet, name.upper().replace(' ', '_')))
+            para_props = ParagraphPropertySet(tabs=[tabs])
+            return Paragraph(styles.ParagraphStyles.Normal, para_props)
+        for name in ['Dots', 'Hyphens', 'Underline', 'Thick Line',
+                     'Equal Sign']:
+            p = _makePara(name)
+            p.append('Before %s' % name, TAB, 'After %s' % name)
+            section.append(p)
         return doc
-    make_para = staticmethod(make_para)
+    make_paraTabLeaders = staticmethod(make_paraTabLeaders)
 
-    def make_para():
+    def test_paraTabLeaders(self):
+        self.doTest()
+
+    def make_paraIndents():
         doc, section, styles = initializeDoc()
+        section.append(
+            'The paragraphs below demonstrate the flexibility , the following is all at the '
+            'same indent level and the one after it has the first line at a '
+            'different indent to the rest. The third has the first line '
+            'going in the other direction and is also separated by a page '
+            'break. Note that the FirstLineIndent is defined as being the '
+            'difference from the LeftIndent.')
+        creditURL = 'http://www.shakespeare-online.com/plots/1kh4ps.html'
+        section.append('(Paragraph text from %s.)' % creditURL)
+
+        sampleParagraph = """The play opens one year after the death of Richard
+            II, and King Henry is making plans for a crusade to the
+            Holy Land to cleanse himself of the guilt he feels over the
+            usurpation of Richard's crown. But the crusade must be postponed
+            when Henry learns that Welsh rebels, led by Owen Glendower, have
+            defeated and captured Mortimer. Although the brave Henry Percy,
+            nicknamed Hotspur, has quashed much of the uprising, there is still
+            much trouble in Scotland. King Henry has a deep admiration for
+            Hotspur and he longs for his own son, Prince Hal, to
+            display some of Hotspur's noble qualities. Hal is more comfortable
+            in a tavern than on the battlefield, and he spends his days
+            carousing with riff-raff in London. But King Henry also has his
+            problems with the headstrong Hotspur, who refuses to turn over his
+            prisoners to the state as he has been so ordered.
+            Westmoreland tells King Henry that Hotspur has many of
+            the traits of his uncle, Thomas Percy, the Earl of Worcester, and
+            defying authority runs in the family."""
+        sampleParagraph = re.sub('\s+', ' ', sampleParagraph)
         para_props = ParagraphPropertySet()
         para_props.SetLeftIndent(TabPropertySet.DEFAULT_WIDTH *  3)
         p = Paragraph(styles.ParagraphStyles.Normal, para_props)
         p.append(sampleParagraph)
         section.append(p)
-        return doc
-    make_para = staticmethod(make_para)
 
-    def make_para():
-        doc, section, styles = initializeDoc()
         para_props = ParagraphPropertySet()
         para_props.SetFirstLineIndent(TabPropertySet.DEFAULT_WIDTH * -2)
         para_props.SetLeftIndent(TabPropertySet.DEFAULT_WIDTH *  3)
         p = Paragraph(styles.ParagraphStyles.Normal, para_props)
         p.append(sampleParagraph)
         section.append(p)
-        return doc
-    make_para = staticmethod(make_para)
 
-    def make_para():
-        doc, section, styles = initializeDoc()
-        # do a page
         para_props = ParagraphPropertySet()
-        para_props.SetPageBreakBefore(True)
         para_props.SetFirstLineIndent(TabPropertySet.DEFAULT_WIDTH)
         para_props.SetLeftIndent(TabPropertySet.DEFAULT_WIDTH)
         p = Paragraph(styles.ParagraphStyles.Normal, para_props)
         p.append(sampleParagraph)
         section.append(p)
         return doc
-    make_para = staticmethod(make_para)
+    make_paraIndents = staticmethod(make_paraIndents)
+
+    def test_paraIndents(self):
+        self.doTest()
 
